[package]
name = "qe-signal"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
qe-domain.workspace = true
# Exact decimal for summing volume during roll-up — never float money (QE-106).
rust_decimal.workspace = true
thiserror.workspace = true
