[package]
name = "qe-signal"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
qe-domain.workspace = true
# Exact decimal for roll-up sums (QE-106) and indicator maths (QE-107). `maths` adds Decimal::sqrt
# (Bollinger / std-dev) — pure, no extra crates, so cargo-deny is unaffected.
rust_decimal = { workspace = true, features = ["maths"] }
thiserror.workspace = true
