[package]
name = "qe-signal"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
qe-domain.workspace = true
# Exact decimal for roll-up sums (QE-106) and indicator maths (QE-107). `maths` adds Decimal::sqrt
# (Bollinger / std-dev) — pure, no extra crates, so cargo-deny is unaffected.
rust_decimal = { workspace = true, features = ["maths"] }
thiserror.workspace = true
# SHA-256 over the ordered indicator-id list for the persisted catalogue identity (QE-402). Already a
# workspace dependency (qe-vintage / qe-determinism), so no new external crate enters the workspace and
# cargo-deny is unaffected.
sha2.workspace = true
# The strategy genome (QE-110) lives here as shared signal logic — a pure feature-vector → decision
# mapping used by both training (qe-wfo) and runtime (qe-runtime), so it crosses the train/live boundary
# only through this shared crate (QE-001 decoupling). serde for the genome's persisted representation.
serde.workspace = true

[dev-dependencies]
# Round-trips the genome's serde representation in the genome tests (moved here with the genome, QE-110).
serde_json.workspace = true
