[package]
name = "qe-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
qe-domain.workspace = true
heed = { workspace = true, features = ["serde-json"] }
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
# The coverage-row serde-shape test (relocated from `qe-cli`, QE-257).
serde_json.workspace = true
