[package]
name = "qe-wfo"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
qe-domain.workspace = true
qe-signal.workspace = true
qe-storage.workspace = true
# Exact decimal for cost / funding / P&L arithmetic — never float money (QE-109).
rust_decimal.workspace = true
# Genome serialisation (QE-110): the canonical vintage-lineage form is JSON.
serde.workspace = true
# JSONL persistence of strategy records (QE-123).
serde_json.workspace = true
# RngCore bound for deterministic adaptive operator selection (QE-112).
rand_core.workspace = true
# Embarrassingly-parallel, scheduling-independent batch evaluation (QE-118).
rayon.workspace = true
# Per-task seeded DetRng so parallel evaluation stays byte-deterministic (QE-118, QE-006);
# also the Lineage carried by persisted strategy records (QE-123).
qe-determinism.workspace = true
